complete bookinfo section

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -1,126 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
     <title>Book Info</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="navbar">
-            <div class="nav-left">
-                <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px">
-                <b>BIG BOOKSHELF</b>
-            </div>
-            <div class="nav-mid">
-                <div>Books</div>
-                <div>Authors</div>
-                <div>What to Read?</div>
-                <div>Gift Ideas</div>
-                <div>About Us</div>
-            </div>
-            <div class="nav-right">
-                <div><img src="assets/search-50.png" alt="" style="max-height: 25px; max-width: 25px"></div>
-                <div><img src="assets/icon-bookmark.png" alt="" style="max-height: 25px; max-width: 25px"></div>
-                <div><img src="assets/icon-bag.png" alt="" style="max-height: 25px; max-width: 25px"></div>
-                <div>
-                    <button style="background-color: #F4CE47; border: #F4CE47 1px; border-radius: 15px; padding: 8px 25px;"> <b>LOGIN</b> </button>
-                </div>
-            </div>
-        </nav>
-        <div class="category">
-            <div style="color: #F4BA30;">ALL BOOKS</div>
-            <div style="color: #F4BA30;">ALL BOOKS</div>
-            <div>ALL BOOKS</div>
-            <div style="color: #F4BA30;">ALL BOOKS</div>
-            <div style="color: #F4BA30;">ALL BOOKS</div>
+      <nav class="navbar">
+        <div class="nav-left">
+          <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px" />
+          <b>BIG BOOKSHELF</b>
         </div>
+        <div class="nav-mid">
+          <div>Books</div>
+          <div>Authors</div>
+          <div>What to Read?</div>
+          <div>Gift Ideas</div>
+          <div>About Us</div>
+        </div>
+        <div class="nav-right">
+          <div><img src="assets/search-50.png" alt="" style="max-height: 25px; max-width: 25px" /></div>
+          <div><img src="assets/icon-bookmark.png" alt="" style="max-height: 25px; max-width: 25px" /></div>
+          <div><img src="assets/icon-bag.png" alt="" style="max-height: 25px; max-width: 25px" /></div>
+          <div>
+            <button style="background-color: #f4ce47; border: #f4ce47 1px solid; border-radius: 15px; padding: 8px 25px"><b>LOGIN</b></button>
+          </div>
+        </div>
+      </nav>
+      <div class="category">
+        <div style="color: #f4ba30">ALL BOOKS</div>
+        <div style="color: #f4ba30">ALL BOOKS</div>
+        <div>ALL BOOKS</div>
+        <div style="color: #f4ba30">ALL BOOKS</div>
+        <div style="color: #f4ba30">ALL BOOKS</div>
+      </div>
     </header>
-    <main style="background-color: #F6F4F0;">
-            <div class="book-info">
-                <div class="book-info-left">
-                    <img src="assets/alan-trotter.png" alt="" style="border-radius: 20px;">
-                    <div class="details" style="font-weight: 500;">
-                        <div>Alan Trotter</div>
-                        <b style="font-size: xx-large;">MUSCLE</b>
-                        <div class="flexrow" style="gap: 10px;">
-                            <div class="flexrow" style="gap: 5px;"> 
-                                <img src="assets/whitestar.png" alt="" style="max-width: 20px; max-height: 20px;"> 
-                                <div>4.5 (100)</div>
-                            </div>
-                            <div>4 reviews</div>
-                        </div>
-                        <div class="flexrow" style="gap: 10px;">
-                            <div class="flexcol">
-                                <div>Category</div>
-                                <div>Publish Date</div>
-                                <div>Languages</div>
-                                <div>Pages</div>
-                                <div>Read Time</div>
-                                <div>Type</div>
-                                <div>Publisher</div>
-                            </div>
-                            <div class="flexcol">
-                                <div>Novel</div>
-                                <div>May 2007</div>
-                                <div>English</div>
-                                <div>208</div>
-                                <div>4-6 hours</div>
-                                <div>Hardcover</div>
-                                <div>Harvill Secker</div>
-                            </div>
-                        </div>
-                        <div class="flexrow" style="gap: 20px; font-size: xx-large; padding-top: 10px; padding-bottom: 10px;">
-                            <div style="opacity: 0.6;">$12.50</div>
-                            <div>$10.50</div>
-                        </div>
-                        <div class="flexrow" style="gap: 12px;">
-                            <button style="padding: 16px 28px; border: 1px solid #F4CE47; border-radius: 16px; background-color: #F4CE47;">BUY NOW</button>
-                            <button style=" color: #F4CE47; padding: 16px 28px; border: 1px solid #F4CE47; border-radius: 16px; background-color: transparent">ADD TO BAG</button>
-                    </div>
+    <main style="background-color: #f6f4f0">
+      <div class="container-bookinfo">
+        <div class="book-info">
+          <div class="book-info-left">
+            <img src="assets/alan-trotter.png" alt="" style="border-radius: 20px" />
+            <div class="details" style="font-weight: 500">
+              <div>Alan Trotter</div>
+              <b style="font-size: xx-large">MUSCLE</b>
+              <div class="flexrow" style="gap: 10px">
+                <div class="flexrow" style="gap: 5px">
+                  <img src="assets/whitestar.png" alt="" style="max-width: 20px; max-height: 20px" />
+                  <div>4.5 (100)</div>
+                </div>
+                <div>4 reviews</div>
+              </div>
+              <div class="flexrow" style="gap: 10px">
+                <div class="flexcol">
+                  <div>Category</div>
+                  <div>Publish Date</div>
+                  <div>Languages</div>
+                  <div>Pages</div>
+                  <div>Read Time</div>
+                  <div>Type</div>
+                  <div>Publisher</div>
+                </div>
+                <div class="flexcol">
+                  <div>Novel</div>
+                  <div>May 2007</div>
+                  <div>English</div>
+                  <div>208</div>
+                  <div>4-6 hours</div>
+                  <div>Hardcover</div>
+                  <div>Harvill Secker</div>
+                </div>
+              </div>
+              <div class="flexrow" style="gap: 20px; font-size: xx-large; padding-top: 10px; padding-bottom: 10px">
+                <div style="opacity: 0.6">$12.50</div>
+                <div>$10.50</div>
+              </div>
+              <div class="flexrow" style="gap: 12px">
+                <button style="padding: 16px 28px; border: 1px solid #f4ce47; border-radius: 16px; background-color: #f4ce47">BUY NOW</button>
+                <button style="color: #f4ce47; padding: 16px 28px; border: 1px solid #f4ce47; border-radius: 16px; background-color: transparent">ADD TO BAG</button>
+              </div>
+            </div>
+          </div>
+          <div class="book-info-right">
+            <div class="flexcol" style="padding: 20px; padding-bottom: 10px; background-color: white; height: 340px; width: 371px; border-radius: 20px; gap: 20px; align-content: space-between">
+              <div class="flexrow" style="justify-content: space-between">
+                <div>PLOT SUMMARY</div>
+                <img src="assets/arrowright.png" alt="" />
+              </div>
+              <div style="display: -webkit-box; -webkit-line-clamp: 9; -webkit-box-orient: vertical; height: 286px; width: 323px; overflow: hidden; text-align: justify;">In a hard-boiled city of crooks, grifts and rackets lurk a pair of toughs: Box and _____. They're the kind of men capable of extracting apologies and reparations, of teaching you a chilling lesson. They seldom think twice, and ask very few questions.Until one night over the poker table, they encounter a pulp writer with wild ideas and an unscrupulous private detective, leading them into what is either a classic mystery, a senseless maze of corpses, or an inextricable fever dream . . . Drunk on cinematic and literary influence, Muscle is a slice of noir fiction in collapse, a ceaselessly imaginative story of violence, boredom and madness.</div>
+              <u>READ PREVIEW</u>
+            </div>
+            <div style="padding: 20px; background-color: white; border-radius: 20px; max-height: 70px;">
+                <div class="flexrow" style="justify-content: space-between; align-items: center;">
+                    <div>RECEPTION</div>
+                    <img src="assets/arrowdownright.png" alt="">
                 </div>
             </div>
-            <div class="book-info-right">
-                <div class="flexcol" style="padding: 20px; background-color: white; height: 390px; width: 371px; border-radius: 20px; gap: 20px; align-content: space-between;">
-                    <div class="flexrow" style="justify-content: space-between;">
-                        <div>PLOT SUMMARY</div>
-                        <img src="assets/arrowright.png" alt="">
-                    </div>
-                    <div style="max-height: 286px; text-overflow: ellipsis; overflow: hidden;">In a hard-boiled city of crooks, grifts and rackets lurk a pair of toughs: Box and _____. They're the kind of men capable of extracting apologies and reparations, of teaching you a chilling lesson. They seldom think twice, and ask very few questions.Until one night over the poker table, they encounter a pulp writer with wild ideas and an unscrupulous private detective, leading them into what is either a classic mystery, a senseless maze of corpses, or an inextricable fever dream . . . Drunk on cinematic and literary influence, Muscle is a slice of noir fiction in collapse, a ceaselessly imaginative story of violence, boredom and madness.</div>
-                    <u>READ PREVIEW</u>
+          </div>
+        </div>
+        <div class="alsolike">
+            <div>YOU MAY ALSO LIKE</div>
+            <!-- <div class="flexrow" style="justify-content: space-between">
+                <div>YOU MAY ALSO LIKE</div>
+                <div></div>
+            </div> -->
+            <div class="book-carousel">
+                <div class="flexcol">
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
                 <div></div>
             </div>
         </div>
+      </div>
     </main>
     <footer>
-        <div class="footer">
-            <div class="footer-top">
-                <div style="display: flex; flex-direction: row; align-items: center; gap: 5px; color: white;">
-                    <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px">
-                    <b>BIG BOOKSHELF</b>
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 5px;">
-                    <img src="assets/insta.png" alt="" style="max-height: 24px; max-width: 24px">
-                    <img src="assets/fb.png" alt="" style="max-height: 24px; max-width: 24px">
-                    <img src="assets/twitter.png" alt="" style="max-height: 24px; max-width: 24px">
-                </div>
-            </div>
-            <div class="footer-bot">
-                <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 15px;">
-                    <div>Terms and Condition</div>
-                    <div>Privacy Policy</div>
-                </div>
-                <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 15px;">
-                    <div>+44 1332 412251</div>
-                    <div>support@bbookshelf.com</div>
-                </div>
-            </div>
+      <div class="footer">
+        <div class="footer-top">
+          <div style="display: flex; flex-direction: row; align-items: center; gap: 5px; color: white">
+            <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px" />
+            <b>BIG BOOKSHELF</b>
+          </div>
+          <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 5px">
+            <img src="assets/insta.png" alt="" style="max-height: 24px; max-width: 24px" />
+            <img src="assets/fb.png" alt="" style="max-height: 24px; max-width: 24px" />
+            <img src="assets/twitter.png" alt="" style="max-height: 24px; max-width: 24px" />
+          </div>
         </div>
+        <div class="footer-bot">
+          <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 15px">
+            <div>Terms and Condition</div>
+            <div>Privacy Policy</div>
+          </div>
+          <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 15px">
+            <div>+44 1332 412251</div>
+            <div>support@bbookshelf.com</div>
+          </div>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
