complete book Carousell

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -103,22 +103,38 @@
           </div>
         </div>
         <div class="alsolike">
-            <div>YOU MAY ALSO LIKE</div>
-            <!-- <div class="flexrow" style="justify-content: space-between">
-                <div>YOU MAY ALSO LIKE</div>
-                <div></div>
-            </div> -->
+            <div style="font-size: x-large; font-weight: 600;">YOU MAY ALSO LIKE</div>
             <div class="book-carousel">
-                <div class="flexcol">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px;  height: 360px;">
+                    <img src="assets/don-denilillo.png" alt="" style="border-radius: 20px; height: 248px;">
+                    <div style="opacity: 0.6;">Don Delilo</div>
+                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">The Names</div>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
+                    <img src="assets/nathaniel.png" alt="" style="border-radius: 20px; min-height: 248px;">
+                    <div style="opacity: 0.6;">Nathaniel Fick</div>
+                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">One Bullet Away</div>
+                </div>
+                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
+                    <img src="assets/donna.png" alt="" style="border-radius: 20px; height: 248px;">
+                    <div style="opacity: 0.6;">Donna Tratt</div>
+                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">The Goldfinch</div>
+                </div>
+                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
+                    <img src="assets/donna.png" alt="" style="border-radius: 20px; min-height: 248px;">
+                    <div style="opacity: 0.6;">Dante</div>
+                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">Divine Comedy</div>
+                </div>
+                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
+                    <img src="assets/daniel-gargallo.png" alt="" style="border-radius: 20px; min-height: 248px;">
+                    <div style="opacity: 0.6;">Daniel Gargallo</div>
+                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">She Beyond Sun</div>
+                </div>
+                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
+                    <img src="assets/dina.png" alt="" style="border-radius: 20px; min-height: 248px;">
+                    <div style="opacity: 0.6;">Dina Nayeri</div>
+                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px; ">A Teaspoon of Earth and Sea</div>
+                </div>
             </div>
         </div>
       </div>
