--- a/bookinfo.html
+++ b/bookinfo.html
@@ -13,7 +13,9 @@
     <header>
       <nav class="navbar">
         <div class="nav-left">
-          <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px" />
+          <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center">
+            <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px" />
+          </a>
           <b>BIG BOOKSHELF</b>
         </div>
         <div class="nav-mid">
@@ -91,58 +93,60 @@
                 <div>PLOT SUMMARY</div>
                 <img src="assets/arrowright.png" alt="" />
               </div>
-              <div style="display: -webkit-box; -webkit-line-clamp: 9; -webkit-box-orient: vertical; height: 286px; width: 323px; overflow: hidden; text-align: justify;">In a hard-boiled city of crooks, grifts and rackets lurk a pair of toughs: Box and _____. They're the kind of men capable of extracting apologies and reparations, of teaching you a chilling lesson. They seldom think twice, and ask very few questions.Until one night over the poker table, they encounter a pulp writer with wild ideas and an unscrupulous private detective, leading them into what is either a classic mystery, a senseless maze of corpses, or an inextricable fever dream . . . Drunk on cinematic and literary influence, Muscle is a slice of noir fiction in collapse, a ceaselessly imaginative story of violence, boredom and madness.</div>
+              <div style="display: -webkit-box; -webkit-line-clamp: 9; -webkit-box-orient: vertical; height: 286px; width: 323px; overflow: hidden; text-align: justify">
+                In a hard-boiled city of crooks, grifts and rackets lurk a pair of toughs: Box and _____. They're the kind of men capable of extracting apologies and reparations, of teaching you a chilling lesson. They seldom think twice, and ask very few questions.Until one night over the poker table, they encounter a pulp writer with wild ideas and an unscrupulous private detective, leading them into what is either a classic mystery, a senseless maze of corpses, or an inextricable fever dream . . . Drunk on cinematic and literary influence, Muscle is a slice of noir fiction in collapse, a ceaselessly imaginative story of violence, boredom and madness.
+              </div>
               <u>READ PREVIEW</u>
             </div>
-            <div style="padding: 20px; background-color: white; border-radius: 20px; max-height: 70px;">
-                <div class="flexrow" style="justify-content: space-between; align-items: center;">
-                    <div>RECEPTION</div>
-                    <img src="assets/arrowdownright.png" alt="">
-                </div>
+            <div style="padding: 20px; background-color: white; border-radius: 20px; max-height: 70px">
+              <div class="flexrow" style="justify-content: space-between; align-items: center">
+                <div>RECEPTION</div>
+                <img src="assets/arrowdownright.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
         <div class="alsolike">
-            <div style="font-size: x-large; font-weight: 600;">YOU MAY ALSO LIKE</div>
-            <div class="book-carousel">
-                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px;  height: 360px;">
-                    <img src="assets/don-denilillo.png" alt="" style="border-radius: 20px; height: 248px;">
-                    <div style="opacity: 0.6;">Don Delilo</div>
-                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">The Names</div>
-                </div>
-                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
-                    <img src="assets/nathaniel.png" alt="" style="border-radius: 20px; min-height: 248px;">
-                    <div style="opacity: 0.6;">Nathaniel Fick</div>
-                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">One Bullet Away</div>
-                </div>
-                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
-                    <img src="assets/donna.png" alt="" style="border-radius: 20px; height: 248px;">
-                    <div style="opacity: 0.6;">Donna Tratt</div>
-                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">The Goldfinch</div>
-                </div>
-                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
-                    <img src="assets/donna.png" alt="" style="border-radius: 20px; min-height: 248px;">
-                    <div style="opacity: 0.6;">Dante</div>
-                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">Divine Comedy</div>
-                </div>
-                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
-                    <img src="assets/daniel-gargallo.png" alt="" style="border-radius: 20px; min-height: 248px;">
-                    <div style="opacity: 0.6;">Daniel Gargallo</div>
-                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px;">She Beyond Sun</div>
-                </div>
-                <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px;">
-                    <img src="assets/dina.png" alt="" style="border-radius: 20px; min-height: 248px;">
-                    <div style="opacity: 0.6;">Dina Nayeri</div>
-                    <div style="font-size: larger; font-weight: 500; margin-bottom: 20px; ">A Teaspoon of Earth and Sea</div>
-                </div>
+          <div style="font-size: x-large; font-weight: 600">YOU MAY ALSO LIKE</div>
+          <div class="book-carousel">
+            <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px">
+              <img src="assets/don-denilillo.png" alt="" style="border-radius: 20px; height: 248px" />
+              <div style="opacity: 0.6">Don Delilo</div>
+              <div style="font-size: larger; font-weight: 500; margin-bottom: 20px">The Names</div>
             </div>
+            <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px">
+              <img src="assets/nathaniel.png" alt="" style="border-radius: 20px; min-height: 248px" />
+              <div style="opacity: 0.6">Nathaniel Fick</div>
+              <div style="font-size: larger; font-weight: 500; margin-bottom: 20px">One Bullet Away</div>
+            </div>
+            <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px">
+              <img src="assets/donna.png" alt="" style="border-radius: 20px; height: 248px" />
+              <div style="opacity: 0.6">Donna Tratt</div>
+              <div style="font-size: larger; font-weight: 500; margin-bottom: 20px">The Goldfinch</div>
+            </div>
+            <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px">
+              <img src="assets/donna.png" alt="" style="border-radius: 20px; min-height: 248px" />
+              <div style="opacity: 0.6">Dante</div>
+              <div style="font-size: larger; font-weight: 500; margin-bottom: 20px">Divine Comedy</div>
+            </div>
+            <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px">
+              <img src="assets/daniel-gargallo.png" alt="" style="border-radius: 20px; min-height: 248px" />
+              <div style="opacity: 0.6">Daniel Gargallo</div>
+              <div style="font-size: larger; font-weight: 500; margin-bottom: 20px">She Beyond Sun</div>
+            </div>
+            <div class="flexcol" style="background-color: white; border-radius: 16px; padding: 16px; gap: 5px; max-width: 194px; height: 360px">
+              <img src="assets/dina.png" alt="" style="border-radius: 20px; min-height: 248px" />
+              <div style="opacity: 0.6">Dina Nayeri</div>
+              <div style="font-size: larger; font-weight: 500; margin-bottom: 20px">A Teaspoon of Earth and Sea</div>
+            </div>
+          </div>
         </div>
         <div class="reviews">
-            <div class="flexrow" style="justify-content: space-between; align-items: center; margin-top: 20px; margin-bottom: 20px;">
-                <div style="font-size: x-large; font-weight: 600;">READERS REVIEW</div>
-                <button style="width: 156px; height: 56px; border-radius: 16px; border: black 1.5px solid; background-color: transparent; font-weight: 500;">ADD REVIEW</button>
-            </div>
-            <div></div>
+          <div class="flexrow" style="justify-content: space-between; align-items: center; margin-top: 20px; margin-bottom: 20px">
+            <div style="font-size: x-large; font-weight: 600">READERS REVIEW</div>
+            <button style="width: 156px; height: 56px; border-radius: 16px; border: black 1.5px solid; background-color: transparent; font-weight: 500">ADD REVIEW</button>
+          </div>
+          <div></div>
         </div>
       </div>
     </main>
