--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                 </div>
             </div>
             <div class="book-details">
+                <a href="bookinfo.html" style="text-decoration: none; color: inherit;">
                 <div><img src="assets/alan-trotter.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                </a>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Alan Trotter</div>
                 <div style="font-weight: 400;">Muscle</div>
                 <div class="button-commentrating">
