update responsive mobile layout

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -98,7 +98,7 @@
               </div>
               <u>READ PREVIEW</u>
             </div>
-            <div style="padding: 20px; background-color: white; border-radius: 20px; max-height: 70px">
+            <div style="padding: 20px; background-color: white; border-radius: 20px; max-height: 70px; width: 371px">
               <div class="flexrow" style="justify-content: space-between; align-items: center">
                 <div>RECEPTION</div>
                 <img src="assets/arrowdownright.png" alt="" />
