complete reviews section and complete bookinfo.html

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -146,7 +146,76 @@
             <div style="font-size: x-large; font-weight: 600">READERS REVIEW</div>
             <button style="width: 156px; height: 56px; border-radius: 16px; border: black 1.5px solid; background-color: transparent; font-weight: 500">ADD REVIEW</button>
           </div>
-          <div></div>
+          <div class="review-carousel">
+            <div class="review-card">
+              <div class="flexrow" style="align-items: center; justify-content: space-between">
+                <div class="flexrow" style="align-items: center; gap: 10px">
+                  <img src="assets/mott.png" alt="" />
+                  <p style="font-size: larger; font-weight: 400">Geoffrey Mott</p>
+                </div>
+                <div>10 October 2022</div>
+              </div>
+              <div class="flexrow" style="align-items: center; gap: 8px; font-weight: 400">
+                <img src="assets/star.png" alt="" style="max-width: 24px; max-width: 24px" />
+                <p>4</p>
+              </div>
+              <div style="max-height: 120px; display: -webkit-box; -webkit-line-clamp: 5; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis">Muscle by Alan Trotter is a fresh piece of noir fiction. Our main characters are the two crooks Box and _____. They are on the hunt for odd jobs that most of us, hopefully, would not be willing to fulfill. It felt reminiscent of both A Clockwork Orange and The Time Machine. I guess that can seem like a strange combination, but Alan Trotter made it work.When Box and _____. encounter a private detective and this strange writer, events quickly start to unravel. Oh, and there is a girl of course! Ixsas</div>
+              <div>
+                <u>READ MORE</u>
+              </div>
+            </div>
+            <div class="review-card">
+              <div class="flexrow" style="align-items: center; justify-content: space-between">
+                <div class="flexrow" style="align-items: center; gap: 10px">
+                  <img src="assets/lisa.png" alt="" />
+                  <p style="font-size: larger; font-weight: 400">Lisa Anderson</p>
+                </div>
+                <div>10 October 2022</div>
+              </div>
+              <div class="flexrow" style="align-items: center; gap: 8px; font-weight: 400">
+                <img src="assets/star.png" alt="" style="max-width: 24px; max-width: 24px" />
+                <p>1</p>
+              </div>
+              <div style="max-height: 120px; display: -webkit-box; -webkit-line-clamp: 5; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis">Oh I really disliked this in the end. What middling interest I had was completely lost by the fifth and last section.This is the story of two tough guys, goons for hire, as they pick up odd jobs roughing up guys, collecting debts and breaking hands. All written as a kind of Chandler pastiche, but possibly more of a parody.One of the goons, Box, passes the time reading sci-fi stories from pulp magazines an acquaintance writes for. Then, as the story progresses and the pair's jobs take a dark turn</div>
+              <div>
+                <u>READ MORE</u>
+              </div>
+            </div>
+            <div class="review-card">
+              <div class="flexrow" style="align-items: center; justify-content: space-between">
+                <div class="flexrow" style="align-items: center; gap: 10px">
+                  <img src="assets/dorrance.png" alt="" />
+                  <p style="font-size: larger; font-weight: 400">Florencio Dorrance</p>
+                </div>
+                <div>10 October 2022</div>
+              </div>
+              <div class="flexrow" style="align-items: center; gap: 8px; font-weight: 400">
+                <img src="assets/star.png" alt="" style="max-width: 24px; max-width: 24px" />
+                <p>5</p>
+              </div>
+              <div style="max-height: 120px; display: -webkit-box; -webkit-line-clamp: 5; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis">This is fantastic, and could have been written just for me. Grimly funny absurdist-existentialist noir that incorporates pulp sci-fi as well as hardboiled crime fiction elements to become a surprisingly powerful examination of the lasting impact of male violence in its many forms.It also does one of my favourite things, which is to recount other fictional stories within its own pages, a Vonnegut-style technique I never seem to tire of. The ending, too, which some have complained about, I think works perfectly.Phenomenally entertaining and sneakily profound.</div>
+              <div>
+                <u>READ MORE</u>
+              </div>
+            </div>
+            <div class="review-card">
+              <div class="flexrow" style="align-items: center; justify-content: space-between">
+                <div class="flexrow" style="align-items: center; gap: 10px">
+                  <img src="assets/anne.png" alt="" />
+                  <p style="font-size: larger; font-weight: 400">Anne Powell</p>
+                </div>
+                <div>10 October 2022</div>
+              </div>
+              <div class="flexrow" style="align-items: center; gap: 8px; font-weight: 400">
+                <img src="assets/star.png" alt="" style="max-width: 24px; max-width: 24px" />
+                <p>3</p>
+              </div>
+              <div style="max-height: 120px; display: -webkit-box; -webkit-line-clamp: 5; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis">Read a great review in the Guardian and took a chance. I should have paid more attention to the comparison with The New York Trilogy, my least favourite Auster experience.This does noir tropes really well with women always called “twists” or “frails”, but I wasn’t really on board for the final section where it all gets a bit meta. I’m down for literary noir, but this was no Motherless Brooklyn.</div>
+              <div>
+                <u>READ MORE</u>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
