complete login.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           <div><img src="assets/icon-bookmark.png" alt="" style="max-height: 25px; max-width: 25px" /></div>
           <div><img src="assets/icon-bag.png" alt="" style="max-height: 25px; max-width: 25px" /></div>
           <div>
+            <a href="login.html">
             <button style="background-color: #f4ce47; border: #f4ce47 1px; border-radius: 15px; padding: 8px 25px"><b>LOGIN</b></button>
+            </a>   
           </div>
         </div>
       </nav>
